data/derived/comb/progs/unify/prog4617.ml.out
Characters 51-54:
  | VarX -> x * 1.0;;
                ^^^
Error: This expression has type float but an expression was expected of type
         int
